--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -15,6 +15,7 @@
     "creationDesk": "Mesa de criação",
     "screen": "Tela",
     "addField": "Adicionar campo",
+    "addOption": "Adicionar opção",
     "whichField": "Qual campo deseja adicionar?",
     "choose": "Escolha..."
   }
